<resources>
    <string name="app_name">Visitor Entry Book</string>
    <string name="str_login">LOGIN</string>
    <string name="strFirstName">First Name</string>
    <string name="strLastName">Last Name</string>
    <string name="str_mobile">Mobile Number</string>
    <string name="str_email">Email Address</string>
    <string name="str_company_name">Company Name</string>
    <string name="str_whom_to_meet">Whom to meet</string>
    <string name="str_purpose_of_meet">Purpose of meet</string>
    <string name="str_govt_issued_proofs">Govt issued proofs</string>
    <string name="str_device_id">Enter device id  or take photo proof</string>
    <string name="str_check_in">CHECK IN</string>
    <string name="catgeory">Choose Catgeory</string>
    <string name="str_home">Home</string>
    <string name="str_check_out">CHECK OUT</string>
    <string name="str_enter_mobile_number">Enter your mobile number</string>
    <string name="str_device_proof">device proof</string>
    <string name="str_govt_proof">govt proof</string>
    <string name="str_did_you_carry">Did you carry any valuable devices</string>
    <string name="str_submit">Submit</string>
    <string name="str_visitor_verification">Visitor verification</string>
    <string name="str_verify">Verify</string>
    <string name="str_select_your_govt_proofs">Select your govt proofs</string>
    <string name="str_capture">Capture</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="str_password">Password</string>
    <string name="str_login_email">Email</string>
    <string name="str_visitor_book">Visitor Book</string>
    <string name="FACEBOOK_APP_ID">252205948585935</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">b8cac975c52b1266a95de6c7c177d6a0</string>
    <string name="permissions_read_phone_state_message">Grant permission to read your phone number from your device to pre-fill.</string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">Grant permission to read your SMS code from your device to pre-fill.</string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="permissions_camera_message">Grant permission to use camera from your device to capture .</string>
    <string name="permissions_camera_title">Capture pic</string>
</resources>
