<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/home_card_view_height_width_corner_radius"
        app:cardBackgroundColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            style="@style/home_title_layout_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_line"
                style="@style/red_view_line_width_height"
                android:background="@color/accent" />

            <com.visitorentrybook.widgets.VbTextView
                style="@style/title_text_view_margin_left_and_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/str_home"
                android:textColor="@color/accent"
                app:setFont="OpenSansCondensedBold" />

            <ImageView
                android:id="@+id/iv_logout"
                style="@style/home_logout_imageview"
                android:src="@drawable/log_out"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>


        <LinearLayout
            style="@style/home_buttons_layout_margintop_padding_left_right_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_check_in"
                style="@style/home_checkin_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_check_in" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_check_out"
                style="@style/home_checkout_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_check_out" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>