<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card_view_corner_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/icons">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_title"
            style="@style/dialog_layout_height"
            android:layout_width="match_parent"
            android:background="@color/primary_dark">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/iv_icon_dialog"
                    style="@style/dialog_icon_img_view"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/visitor" />

                <com.visitorentrybook.widgets.VbTextView
                    android:id="@+id/text_view_description"
                    style="@style/dialog_text_view_description_margin_left_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_icon_dialog"
                    android:layout_centerHorizontal="true"
                    android:text="@string/str_visitor_verification"
                    android:textColor="@color/icons"
                    app:setFont="OpenSansCondensedBold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_title">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_mobile"
                style="@style/dialog_mobile_edit_text_textInputLayout_margin_left_right_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary_text"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/EdittextLabel">

                <com.visitorentrybook.widgets.VbEditText
                    android:id="@+id/edit_text_mobile"
                    style="@style/dialog_mobile_edit_text_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_enter_mobile_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    app:setEdittextFont="OpenSansCondensedLight" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_mobile"
            style="@style/dialog_verify_btn_width_margin_top_bottom_padding"
            android:layout_centerHorizontal="true"
            android:text="@string/str_verify" />
    </RelativeLayout>


</android.support.v7.widget.CardView>