<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        style="@style/home_card_view_height_width_corner_radius"
        app:cardBackgroundColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            style="@style/home_title_layout_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:id="@+id/view_line"
                style="@style/red_view_line_width_height"
                android:background="@color/accent" />

            <com.visitorentrybook.widgets.VbTextView
                style="@style/title_text_view_margin_left_and_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/str_login"
                android:textColor="@color/accent"
                app:setFont="OpenSansCondensedBold" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/login_edittext_button_layout">

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/login_text_input_layout_email"
                >

                <com.visitorentrybook.widgets.VbEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary_text"
                    app:setEdittextFont="OpenSansCondensedLight" />
            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/login_text_input_layout_email"
                >

                <com.visitorentrybook.widgets.VbEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_text"
                    app:setEdittextFont="OpenSansCondensedLight" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/login_login_button"
                android:text="@string/str_login" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>